--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12175,55 +12175,81 @@ fieldset:disabled .btn {
 
 /* Bootstrap */
 
-html,
-body {
-  background-color: #fff;
-  color: #636b6f;
-  font-family: "Nunito", sans-serif;
-  font-weight: 200;
-  height: 100vh;
-  margin: 0;
+/* MAIN */
+
+.jumbotron {
+  background-image: url("https://fumettologica.it/wp-content/uploads/2022/02/dark-crisis.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 600px;
 }
 
-.full-height {
-  height: 100vh;
+.load a {
+  padding: 0.2rem 1rem;
 }
 
-.flex-center {
-  align-items: center;
+/* FOOTER */
+
+.footer {
+  background-color: #303030;
+}
+
+.footer ul {
+  list-style: none;
+}
+
+.footer .col {
+  width: 13%;
+}
+
+/* Footer end */
+
+.footer_end_menu {
+  background-color: #303030;
   display: flex;
-  justify-content: center;
+  flex-wrap: wrap;
+  align-content: center;
+  align-items: center;
+  height: 15vh;
 }
 
-.position-ref {
-  position: relative;
+.footer_end_menu a {
+  border: none;
 }
 
-.top-right {
-  position: absolute;
-  right: 10px;
-  top: 18px;
+.button {
+  border: 1px solid #0282F9;
+  padding: 0.5rem;
 }
 
-.content {
-  text-align: center;
+.button:hover {
+  filter: drop-shadow(0 0 6px white);
 }
 
-.title {
-  font-size: 84px;
+.button a {
+  color: white;
 }
 
-.links > a {
-  color: #636b6f;
-  padding: 0 25px;
-  font-size: 13px;
-  font-weight: 600;
-  letter-spacing: 0.1rem;
-  text-decoration: none;
-  text-transform: uppercase;
+.follow {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
 }
 
-.m-b-md {
-  margin-bottom: 30px;
+.follow h5 {
+  margin-right: 1rem;
+  color: #0282F9;
+}
+
+.follow a:hover {
+  filter: drop-shadow(2px 4px 6px black);
+}
+
+.payment {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
