--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,56 +1,98 @@
 //
 
- /* Bootstrap */
+/* Bootstrap */
 @use 'bootstrap';
 
-html,
-body {
-    background-color: #fff;
-    color: #636b6f;
-    font-family: 'Nunito', sans-serif;
-    font-weight: 200;
-    height: 100vh;
-    margin: 0;
+$dc-main-bg: #1C1C1C;
+$dc-dark: #303030;
+$dc-white: white;
+$dc-primary: #0282F9;
+
+
+/* MAIN */
+.jumbotron {
+    background-image: url('https://fumettologica.it/wp-content/uploads/2022/02/dark-crisis.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 600px;
 }
 
-.full-height {
-    height: 100vh;
+
+.load {
+    a {
+        padding: 0.2rem 1rem;
+    }
+
 }
 
-.flex-center {
-    align-items: center;
+/* FOOTER */
+
+.footer {
+    background-color: #303030;
+
+    ul {
+        list-style: none;
+    }
+
+    .col {
+        width: 13%;
+
+    }
+}
+
+
+
+
+
+
+/* Footer end */
+.footer_end_menu {
+    background-color: $dc-dark;
     display: flex;
-    justify-content: center;
+    flex-wrap: wrap;
+    align-content: center;
+    align-items: center;
+    height: 15vh;
+
+    a {
+        border: none;
+    }
 }
 
-.position-ref {
-    position: relative;
+.button {
+    border: 1px solid $dc-primary;
+    padding: 0.5rem;
+
+    &:hover {
+        filter: drop-shadow(0 0 6px white);
+    }
+
+    a {
+        color: $dc-white;
+    }
 }
 
-.top-right {
-    position: absolute;
-    right: 10px;
-    top: 18px;
+.follow {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+
+    h5 {
+        margin-right: 1rem;
+        color: $dc-primary;
+    }
+
+    a:hover {
+        filter: drop-shadow(2px 4px 6px black);
+    }
 }
 
-.content {
-    text-align: center;
+.payment {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
 }
 
-.title {
-    font-size: 84px;
-}
 
-.links>a {
-    color: #636b6f;
-    padding: 0 25px;
-    font-size: 13px;
-    font-weight: 600;
-    letter-spacing: .1rem;
-    text-decoration: none;
-    text-transform: uppercase;
-}
-
-.m-b-md {
-    margin-bottom: 30px;
-}
